2004-03-08  Per Bothner  <per@bothner.com>

	* exp-format-users.html:  Don't expect XML declaration.

2004-01-12  Per Bothner  <per@bothner.com>

	* TestMisc.java (main): New testcase for navigating from attribute
	to parent based on bug reported 2003-11-29 by sascha_opletal@web.de.

	* exp-format-users.html:  Update to include XML declaration.

2003-12-26  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Added a new test.

2003-12-25  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Add test for namespace declaration attribute.
	Fix output from another test.

2003-12-21  Per Bothner  <per@bothner.com>

	* Makefile.am (usemod.class):  Specify CLASSPATH explicitly.
	Otherwith we don't find Mod1 when configured --with-gcj.

2003-11-25  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST):  Add new files.

2003-11-21  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  If M > N then M to N is now empty.

2003-11-09  Per Bothner  <per@bothner.com>

	* TestMisc.java (matchTest): New method
	(evalTest):  Use matchTest.
	(main):  Added 4 tests for evalWithFocus.

2003-11-02  Per Bothner  <per@bothner.com>

	* TestMisc.java (eval): Replace 'parseFile' call by call to new
	'parse' method.

2003-10-30  Per Bothner  <per@bothner.com>

	* auction.xml.in:  New test data.
	* use-cases.xml:  Add 5 new testcases, and clean up an old one.

2003-10-29  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Update for output of namespace declaration.

2003-10-19  Per Bothner  <per@bothner.com>

	* TestMisc.java (main): 3 new tests for 'some/every ... satsifies'.
	9 new tests for 'union/intersect/except'.
	(evalNodeNames):  New convenience method.

2003-10-12  Per Bothner  <per@bothner.com>

	* TestMisc.java (eval):  Re-write to use parseFile rather than parse.

	* mod1.xql, mod2.xql, usemod.xql:  Sources for library module test.
	* usemod.exp:  Expected output for new test.
	* Makefile.am:  Rules for new test.

2003-10-08  Per Bothner  <per@bothner.com>
