@@ -1,4 +1,4 @@
 <table>
-<tr><td><b>a1</b></td><td><list>100 12</list></td></tr>
+<tr><td><b>a1</b></td><td><list>100 <!--ignore-this-comment-->12</list></td></tr>
 <tr><td><b>b1</b></td><td><list>100 22</list></td></tr>
 </table>
